--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			$.get("config/global/client.json", function(data) {
 				window.P = new PClient();
 				window.P.connect({ host: data.host, port: data.port });
+				window.p = window.P;
 			});
 		};
 	</script>
